Fix layout bug when age 10 deck is empty (https://boardgamearena.com/bug?id=78908)

--- a/innovation.css
+++ b/innovation.css
@@ -613,6 +613,13 @@
   width: 208.45px;
 }
 
+#decks_1, #decks_2 {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
 #available_relics_container, #available_achievements_container, #available_special_achievements_container {
   vertical-align: top;
   margin-top: 30px;
